kubernetes/longhorn/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-ui-lb
  namespace: longhorn-system
spec:
  selector:
    app: longhorn-ui
  ports:
    - port: 80
      targetPort: 8000
  type: LoadBalancer
  loadBalancerIP: 10.1.2.145
